# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md
resources/flydroid/: readme.txt
src/: main.cpp  window.cpp  window.h
src/core/: canvas.cpp  canvas.h  color.cpp  color.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertex.cpp  vertex.h
src/math/: constants.h  matrix.cpp  matrix.h  transformation.cpp  transformation.h  vector.cpp  vector.h
src/shaders/: BlinnPhongShader.cpp  BlinnPhongShader.h  shader.cpp  shader.h  simpleShader.cpp  simpleShader.h
src/utils/: camera.cpp  camera.h  orbitCamera.cpp  orbitCamera.h
